fix: stop DOG getting squashed on narrow screens

--- a/src/assets/styles/player.scss
+++ b/src/assets/styles/player.scss
@@ -136,6 +136,9 @@ $romper-hover-text-size: 1.53em;
   }
 
   .romper-dog {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
     pointer-events: none;
     position: absolute;
     z-index: 101;
